--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ngrx/store": "^8.0.1",
         "@ngrx/store-devtools": "^8.0.1",
         "ng6-toastr-notifications": "^1.0.4",
+        "ngrx-store-localstorage": "^7.0.1",
         "rxjs": "~6.4.0",
         "rxjs-compat": "^6.5.2",
         "tslib": "^1.9.0",
